initial/defunct commit